<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AccountFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="81dp"
        android:layout_height="92dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="60dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/helado"
        app:layout_constraintBottom_toTopOf="@+id/tvLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/empresaView"
        android:layout_width="199dp"
        android:layout_height="67dp"
        android:fontFamily="@font/pattaya"
        android:gravity="clip_horizontal|center|clip_vertical"
        android:text="@string/dibari"
        android:textColor="#EB4B79"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="@+id/heladeriaView"
        app:layout_constraintStart_toStartOf="@+id/heladeriaView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/heladeriaView"
        android:layout_width="199dp"
        android:layout_height="24dp"
        android:layout_marginEnd="28dp"
        android:fontFamily="@font/pattaya"
        android:gravity="center"
        android:text="@string/heladeria_sangucheria_artesanal"
        android:textColor="#16CF67"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/empresaView"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="220dp"
        android:layout_height="43dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="4dp"
        android:text="@string/bienvenido"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"></TextView>

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="298dp"
        android:layout_height="46dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="12dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/correo_electr_nico"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="297dp"
        android:layout_height="43dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="15dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/contrase_a"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/switch1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="104dp"
        android:layout_height="24dp"
        android:layout_marginStart="220dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="34dp"
        android:text="@string/string_recordar"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/black"
        android:textColorLink="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="249dp"
        android:layout_height="45dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="50dp"
        android:background="#B0BEC5"
        android:text="@string/ingresar"
        android:textColor="#000000"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/black"
        android:textColorLink="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/inicia_sesion_para_realizar_tus_compras"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/editTextEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvLogin" />


</androidx.constraintlayout.widget.ConstraintLayout>