<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    app:cardCornerRadius="18dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/categorias"
        android:layout_width="320dp"
        android:layout_height="90dp"
        android:background="@drawable/cuadros_productos">

        <TextView
            android:id="@+id/nombre"
            android:layout_width="0dp"
            android:layout_height="19dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/open_sans"
            android:gravity="left"
            android:text="@string/vaso_2_sabores"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/tipo_valor_dinero"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgProducto"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SmallSp" />

        <ImageView
            android:id="@+id/imgProducto"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:contentDescription="@string/img_producto_destacado"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.6"
            app:srcCompat="@drawable/vaso_2_bolas_helado" />

        <TextView
            android:id="@+id/tipo_valor_dinero"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/open_sans"
            android:text="@string/s"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/precio"
            app:layout_constraintStart_toStartOf="@+id/nombre"
            app:layout_constraintTop_toTopOf="@+id/precio" />

        <TextView
            android:id="@+id/precio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="136dp"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/open_sans"
            android:text="@string/cantidad_precio"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>