<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondodegradado"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logoView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="200dp"
        android:foregroundGravity="center|fill"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/helado"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/empresaView"
        android:layout_width="408dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/pattaya"
        android:gravity="clip_horizontal|center|clip_vertical"
        android:text="@string/dibari"
        android:textColor="#FFFFFF"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoView" />

    <TextView
        android:id="@+id/heladeriaView"
        android:layout_width="0dp"
        android:layout_height="33dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="260dp"
        android:fontFamily="@font/pattaya"
        android:gravity="center"
        android:text="@string/heladeria_sangucheria_artesanal"
        android:textColor="#FFEB3B"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/empresaView"
        app:layout_constraintVertical_bias="0.368" />

</androidx.constraintlayout.widget.ConstraintLayout>